# mondu-website-scrapper

./: .flake8  .gitignore  .pylintrc  LICENSE  Makefile  Pipfile  README.md  scrapy.cfg  setup.cfg  setup.py
mondu_website_scrapper/: .env.template  export.py  items.py  middlewares.py  pipelines.py  report.py  settings.py  utils.py
mondu_website_scrapper/gsheet_api/: .gitignore  client_secret.json  client_secret.json.template  export2_gsheet.py  gsheet_settings.py  read_from_gsheet.py  utils.py
mondu_website_scrapper/scraped_results/: findingnemo.csv  findingnemo__report.csv
mondu_website_scrapper/spiders/: catch_fish_scraper.py  catch_fish_scrapper.py
