[metadata]
name = mondu_website_scrapper
version = attr: mondu_website_scraper.__version__
description = Web scappers helping marketing and sales team finding leads
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir = =.
packages = find:
python_requires = ~=3.10.3
include_package_data = True

[options.packages.find]
where = .
